# afterburner

./: .gitignore  Cargo.toml  README.md  cert.crt  cert.key  explanation.md  setup_net.sh
.cargo/: config.toml
afterburner-app/: Cargo.toml
afterburner-app/src/: emit.rs  flood.rs  headers.rs  main.rs  quic_driver.rs  xsk.rs
afterburner-common/: Cargo.toml
afterburner-ebpf/: Cargo.toml
afterburner-ebpf/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
